fonts and colors are set

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@ lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Tr
   <!--<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css">-->
   <link rel="stylesheet" href="assets/css/foundation/foundation.css">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700,400' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Alegreya:700' rel='stylesheet' type='text/css'>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700,400' rel='stylesheet' type='text/css'> -->
+  <!-- <link href='http://fonts.googleapis.com/css?family=Alegreya:700' rel='stylesheet' type='text/css'> -->
+  <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
   <script src="assets/js/vendor/modernizr.js"></script>
 </head>
 
@@ -51,7 +53,7 @@ lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Tr
     <div class="row">
       <div class="large-6 columns about-box">
         <div class="purple-box">
-          <h2>Price Estimate</h2>
+          <h1>Price Estimate</h1>
 
           <!-- <a href="http://foundation.zurb.com/templates/banner-theme.html#" class="secondary small button">Learn More →</a> -->
           <div class="row" id="estimate-logic">
@@ -66,7 +68,7 @@ lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Tr
             </div>
           </div>
           <p>Price does not include tax.</p>
-          <p>For custom quilting please give me a call for a price.</p>
+          <h3>For custom quilting please give me a call for a price.</h3>
         </div>
       </div>
     </div>
@@ -76,32 +78,32 @@ lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Tr
     <section class="hero-content">
       <div class="row">
         <div class="large-8 columns about-content">
-          <h4>This is a content section.</h4>
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing
-            rump corned beef.</p>
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing
-            rump corned beef.</p>
+          <h4>My Mom is the best!</h4>
+          <p>
+            She's a quilting artist.
+          </p>
+          <p>These are some of the awards she's won.</p>
         </div>
         <div class="large-4 columns">
           <ul class="small-block-grid-2">
             <li>
               <a href="http://foundation.zurb.com/templates/banner-theme.html#">
-                <img src="assets/img/dog1.png">
+                <img src="assets/img/blurry.jpg">
               </a>
             </li>
             <li>
               <a href="http://foundation.zurb.com/templates/banner-theme.html#">
-                <img src="assets/img/dog2.png">
+                <img src="assets/img/quilt1.jpg">
               </a>
             </li>
             <li>
               <a href="http://foundation.zurb.com/templates/banner-theme.html#">
-                <img src="assets/img/dog3.png">
+                <img src="assets/img/quilt2.jpg">
               </a>
             </li>
             <li>
               <a href="http://foundation.zurb.com/templates/banner-theme.html#">
-                <img src="assets/img/dog4.png">
+                <img src="assets/img/thread9.jpg">
               </a>
             </li>
           </ul>
