--- a/src/index1.html
+++ b/src/index1.html
@@ -8,20 +8,19 @@ lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Tr
 </script>-->
 
 <head>
+   <!-- Added here so that IE will download the file before performing any blocking operations -->
+   <link href='http://fonts.googleapis.com/css?family=Sacramento&text=Quilts%20By%20You%20and%20Me' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="assets/css/foundation/foundation.css">
+   <link rel="stylesheet" href="assets/css/main.css">
+
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Quilts By You and Me</title>
    <meta name="description" content="Home page for Gayle Wilson's Quilts By You and Me">
    <meta name="author" content="clay.schick@gmail.com">
-   <!--<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css">-->
-   <link rel="stylesheet" href="assets/css/foundation/foundation.css">
-   <link rel="stylesheet" href="assets/css/main.css">
-   <!-- <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700,400' rel='stylesheet' type='text/css'> -->
-   <!-- <link href='http://fonts.googleapis.com/css?family=Alegreya:700' rel='stylesheet' type='text/css'> -->
-   <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
-   <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-   <link rel="stylesheet" href="assets/css/hint.min.css"></link>
+
+   <title>Quilts By You and Me</title>
+
    <script src="assets/js/vendor/modernizr.js"></script>
 </head>
 
